debhelper (9.20150520+ddebs) UNRELEASED; urgency=medium

  * dh_gencontrol: Put ddebs in the "debugsym" section.
  * dh_strip: Support a new --[no-]ddebs option intended for
    packages to disable automatic ddebs.
  * dh_strip: Do not create ddebs for "-dbg" packages.

 -- Niels Thykier <niels@thykier.net>  Mon, 25 May 2015 12:10:37 +0200

debhelper (9.20150519+ddebs) experimental; urgency=medium

  * dh_strip: Add --ddeb-migration option to support migration
    from a --dbg-package to a automatic ddeb.
  * Dh_Lib.pm: Add "package_multiarch" function.
  * d/control: Add versioned Build-Depends on dpkg-dev to support
    creating ddebs with the ".deb" extension.
  * Dh_lib.pm: Generate ddebs with the ".deb" extension.
  * dh_gencontrol: Reduce the "pkg:arch" to "pkg" as APT and dpkg
    disagree on what satisfies an "pkg:arch" dependency.
  * dh_strip.1: Document what inhibits ddeb generation.
  * dh_gencontrol: Only mark a ddeb as Multi-Arch: same if the
    original deb was Multi-Arch: same.  All other ddebs are now
    Multi-Arch: no (by omitting the field).
  * dh_strip: Avoid generating a ddeb if the same name as an
    explicitly declared package.  Apparently, Ubuntu has been
    creating some of these manually.

 -- Niels Thykier <niels@thykier.net>  Tue, 19 May 2015 21:56:55 +0200

debhelper (9.20150507) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_bugfiles: Fix regression in installing the reportbug
    script correctly.  Thanks to Jakub Wilk for reporting.
    (Closes: #784648)

  [ Translation updates ]
  * pt - Thanks to Américo Monteiro.
    (Closes: #784582)

 -- Niels Thykier <niels@thykier.net>  Thu, 07 May 2015 20:07:49 +0200

debhelper (9.20150502+ddebs) experimental; urgency=medium

  * Add /experimental/ ddebs support *if* the environment
    variable DH_BUILD_DDEBS is set to 1.

 -- Niels Thykier <niels@thykier.net>  Sat, 02 May 2015 10:35:29 +0200

debhelper (9.20150502) unstable; urgency=medium
