@@ -4,6 +4,8 @@ debhelper (9.20150520+ddebs) UNRELEASED; urgency=medium
   * dh_strip: Support a new --[no-]ddebs option intended for
     packages to disable automatic ddebs.
   * dh_strip: Do not create ddebs for "-dbg" packages.
+  * dh_builddeb: Let dpkg figure out the name of the ddebs
+    itself now that ddebs uses a ".deb" extension.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 25 May 2015 12:10:37 +0200
 
